exports[`List rendering should render correctly with a card 1`] = `
<div
  className="my-list-container-item panel panel-default"
  id={undefined}>
  <div
    className="panel-body">
    <div
      className="list-group">
      <button
        className="list-group-item"
        onClick={[Function]}
        type="button">
        <div>
          <span />
          <span
            className="pull-right" />
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`List rendering should render correctly with children 1`] = `
<div
  className="my-list-container-item panel panel-default"
  id={undefined}>
  <div
    className="panel-body">
    <span>
      unique
    </span>
  </div>
</div>
`;

exports[`List rendering should render correctly with no cards 1`] = `
<div
  className="my-list-container-item panel panel-default"
  id={undefined} />
`;

exports[`List rendering should render correctly with title 1`] = `
<div
  className="my-list-container-item panel panel-default"
  id={undefined}>
  <div
    className="panel-heading">
    title
  </div>
</div>
`;

exports[`List rendering should render correctly with two card 1`] = `
<div
  className="my-list-container-item panel panel-default"
  id={undefined}>
  <div
    className="panel-body">
    <div
      className="list-group">
      <button
        className="list-group-item"
        onClick={[Function]}
        type="button">
        <div>
          <span />
          <span
            className="pull-right" />
        </div>
      </button>
      <button
        className="list-group-item"
        onClick={[Function]}
        type="button">
        <div>
          <span />
          <span
            className="pull-right" />
        </div>
      </button>
    </div>
  </div>
</div>
`;
